--- a/assignment1.html
+++ b/assignment1.html
@@ -39,7 +39,7 @@
         <p> ———— FROM BBC LEARNING ENGLISH </p>
         <p> You can leave your mood on the right form, which will hopefully help you check if you are trapped in the emotion of Monday Blue.
 
-        After visiting my page, hope you can start your new week in a 'crazy' enjoyable mood. More details please go to my <a href=>journal</a>.
+        After visiting my page, hope you can start your new week in a 'crazy' enjoyable mood. More details please go to my <a href="https://hkdesign.org/assignment1-say-goodbye-to-monday-blue-with-coding/">journal</a>.
     </p>  
     </div>
 
