--- a/assignment1/assignment2.html
+++ b/assignment1/assignment2.html
@@ -60,7 +60,7 @@
                 In conclusion, if you are a tourist who has a budget of $101-200 but wants to find a restaurant with a good reputation (rating >4.0) in the busiest districts of TST (which we think should have 50 or more restaurants), 
                 <b>“PUTIEN”</b> in Mira Place may be a good choice for you.</p>
             <img src="detail.png" width="400" height="150">
-            <p> More information please click <a href> here </a>to view my journal.</p>
+            <p> More information please click <a href="https://hkdesign.org/assignment2-whats-for-dinner-in-tsim-sha-tsui/"> here </a> to view my journal.</p>
             </div>
 
     </div>
