--- a/assignment1/assignment2.html
+++ b/assignment1/assignment2.html
@@ -10,10 +10,16 @@
 <body>
    
     <div class="title"> ASSIGNMENT 2 -- Open Rice analysis </div>
-   
+    <ul class="navigation_bar">
+        <li> <a href="assignment1.html"> Assignment&nbsp1 </a> </li>
+        <li> <a href="assignment2.html"> Assignment&nbsp2 </a> </li>
+        <li> <a href="assignment3.html"> Assignment&nbsp3 </a> </li>
+        <li> <a href="assignment4.html"> Assignment&nbsp4 </a> </li>
+        <li> <a href="assignment5.html"> Assignment&nbsp5 </a> </li>
+    </ul>
    
     <div class="main">
-        <div class="left">
+            <div class="left">
             <div class="text">
     <h2>1. Restaurant category</h2>
     <h3>Primary category </h3>
