--- a/assignment1/assignment4.html
+++ b/assignment1/assignment4.html
@@ -5,10 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="other_assignments.css">
+    <link rel="stylesheet" href="assignment4.css">
 </head>
 <body>
     <div class="title"> ASSIGNMENT 4 </div>
-    <div class="main"> There will be my assignment 4. </div>
+    <ul class="navigation_bar">
+        <li> <a href="assignment1.html"> Assignment&nbsp1 </a> </li>
+        <li> <a href="assignment2.html"> Assignment&nbsp2 </a> </li>
+        <li> <a href="assignment3.html"> Assignment&nbsp3 </a> </li>
+        <li> <a href="assignment4.html"> Assignment&nbsp4 </a> </li>
+        <li> <a href="assignment5.html"> Assignment&nbsp5 </a> </li>
+    </ul>
+    <div class = "main"> 
+            <div class = "left"> 
+                <div class="text">
+    <p> Based on previous user research, there are several stages a user often goes through when they want to watch a live house performance. Since my website is positioned as an integrated platform for music lovers who enjoy going to live houses, where they can find information, share experiences, and find friends with common interests in the community, the scope of the future journey and story map will be restricted to (1) find a venue (2) examine and decide on a venue (3) decide on a performance (4) purchase tickets (5) go to the selected venue and enjoy (6) leave comments.</p>
+    <p> Usability testing was conducted to investigate whether the website is easy and helpful to use and to what extent the logic of information architecture was clear and reasonable. Thus 3 tasks are designed in terms of stages 1, 2, and 3.  </p>
+    <p> To further narrow the scope, the geographical location that has been targeted for a pilot market “Beijing”, where the cultural atmosphere for live house music is very strong. Also, people who meet the requirements of our persona -- office workers who want to relax through live house also gather here.</p>
+    <p>For regular users of the site, the comprehensive information is a hook for their first attempts, as they can not only browse the information provided on the site about shows and venues, but also see the posts and experiences shared by other members of the community. However, pursuing an upgraded experience, such as discounts on tickets and unrestricted access to the community to post and share, a paid membership is required.</p>
+    <p> The usability test has been executed and the site is about to be optimized using the test results and user feedbacks. More information please click <a href="https://hkdesign.org/assignment4-a-good-choice-for-live-house-lovers/"> here </a> to view my journal.</p>
+        </div>
+            </div>
+          
+
+        <div class="right">
+            <img src="monkey.jpeg" width="450" height="250">
+            <p> </p>
+            <p> </p>
+            <img src="ticket.jpeg" width="450" height="250">
+        </div>
+
+    </div>
+    
+
 </body>
 </html>
