--- a/assignment1/assignment5.html
+++ b/assignment1/assignment5.html
@@ -5,10 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="other_assignments.css">
+    <link rel="stylesheet" href="assignment5.css">
 </head>
 <body>
     <div class="title"> ASSIGNMENT 5 </div>
-    <div class="main"> There will be my assignment 5. </div>
+    <ul class="navigation_bar">
+        <li> <a href="assignment1.html"> Assignment&nbsp1 </a> </li>
+        <li> <a href="assignment2.html"> Assignment&nbsp2 </a> </li>
+        <li> <a href="assignment3.html"> Assignment&nbsp3 </a> </li>
+        <li> <a href="assignment4.html"> Assignment&nbsp4 </a> </li>
+        <li> <a href="assignment5.html"> Assignment&nbsp5 </a> </li>
+    </ul>
+    <div class = "main"> 
+            <div class = "left"> 
+                <div class="text">
+    <p>This website is positioned as an integrated platform for music lovers who enjoy going to live houses where they can find information, purchase, share experiences, and find friends with common interests in the community.
+    </p>                   
+    <p>To verify the logic of jumping between different pages and test the ease of use in gaining information about live house venues and shows, 5 tasks were given:</p>
+     <ul>
+        <li>1)	Find a detail page of a live house venue</li>
+        <li>2)	Bookmark a live house venue</li>
+        <li>3)	Register and log in </li>
+        <li>4)	View the bookmarked one in the collection</li>
+        <li>5)	Browse information in the community and find one post </li>
+     </ul>
+     <p>After finishing the 5 tasks, participants are required to answer post-test questions, the question list is as follows:</p>
+     <ul>
+        <li>1)	Please rate the overall process: 5 as very satisfied, 1 as very disappointed </li>
+        <li>2)	What difficulties did you encounter in the process?</li>
+        <li>3)	How do you think this site can be improved, or any more features need to be added? </li>
+        <li>4)	Would you want to sign up as a new user if you could get a free membership for three months?</li>
+        <li>5)	Do you want to continue paying to maintain your membership after the free trial? </li>
+     </ul>
+     <p>For the quantitative test, I deployed an A/Btest to test the extent to which a three-month free membership experience had an impact on users' willingness to sign up. A variation of the webpage was to add a promotional banner below the '成为会员' section on the home page, to test whether this would inspire more users to jump to the details page of the membership system and trigger more sign-up and login form submissions.
+    </p>
+    <p>The test is still running and results will be released and updated later on the site. More information please click <a href="https://hkdesign.org/assignment5-is-the-website-user-friendly-and-are-you-willing-to-pay/">here</a> to view my journal.</p>
+    </div>
+    </div>
+          
+
+        <div class="right">
+            <img class="usability" src="task_complete.png" width="450" height="300">
+            <p> </p>
+            <p> </p>
+            <img src="with_banner.png" width="450" height="250">
+        </div>
+
+    </div>
+    
+
 </body>
 </html>
